# learn-opengl

./: .gitmodules  CMakeLists.txt  README.md
include/: Camera.hpp  Shader.hpp  Texture2D.hpp  VAO.hpp  VBO.hpp
shaders/01-getting-started/: 03-shaders.frag  03-shaders.vert  04-textures.vert  05-transformations.vert  06-coordinate-systems.vert  07-camera.frag  07-camera.vert
shaders/02-lighting/: 08-colors-lamp.vert  08-colors-lighting.frag  09-basic-lighting-lighting.frag  09-basic-lighting-lighting.vert  10-materials-lamp.frag  10-materials-lighting.frag
src/: Camera.cpp  Shader.cpp  Texture2D.cpp
src/01-getting-started/: 01-hello-window.cpp  02-hello-triangle.cpp  03-shaders.cpp  04-textures.cpp  05-transformations.cpp  06-coordinate-systems.cpp  07-camera.cpp
src/02-lighting/: 08-colors.cpp  09-basic-lighting.cpp  10-materials.cpp
src/getting-started/: hello-triangle.cpp
